# duckhunt-cpp

./: .gitignore  CMakeLists.txt
src/: DuckSpawner.cpp  DuckSpawner.h  Main.cpp  Texture.cpp  Texture.h
